these are the new changes in main body

--- a/index.html
+++ b/index.html
@@ -86,6 +86,22 @@
             <p>#Krishna. Conscious .#Posts. Vrindawan</p>
        </div>
 
+       <div class="descrip">
+         <p>👨‍💻 Radha Krishna — Your Calm in the Coding Storm</p>
+         <p>🤯 Coding can be stressful.</p>
+         <p>😇 Radha Krishna is here to make it smarter, and stress-free.</p>
+         <p>📧 Reach out: codingstella@gmail.com</p>
+       </div>
+
+       <div class="status">
+        <div><img src="assets/GaurNitai1.jpg" ></div>
+        <div><img src="assets/RK4.jpg" ></div>
+        <div><img src="assets/krishna Posts pic1.jpg"></div>
+        <div><img src="assets/RK3.jpg"></div>
+        <div><img src="assets/chaitanya mahaprabhu post.jpg"></div>
+        <div><img src="assets/Gaura Krishna.jpg"></div>
+       </div>
+
 
 
     </main>
